--- a/app/project1/webapp/css/style.css
+++ b/app/project1/webapp/css/style.css
@@ -5,9 +5,9 @@
 }
 
 
-.historyBtn .sapMBtnIcon {
+/* .historyBtn .sapMBtnIcon {
     color: green !important;
-}
+} */
 
 .historyBtn .sapMBtnText {
     color: green !important;
