--- a/app/orderproject/webapp/view/View1.view.xml
+++ b/app/orderproject/webapp/view/View1.view.xml
@@ -7,6 +7,7 @@
     <Wizard
         id="customerWizard"
         showNextButton="false"
+        renderMode="Page"
     >
         <!-- STEP 1: CUSTOMER -->
         <WizardStep
